# VenvCleaner

./: .gitignore  .rules  AIChat1.md  Cargo.toml  Design.md  README.md  VenvCleaner.md  build.sh
src/: main.rs
src/cli/: mod.rs
src/core/: file_utils.rs  mod.rs  venv_info.rs
src/gui/: app.rs  components.rs  mod.rs  theme.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
