[package]
name = "venv_cleaner"
version = "0.1.0"
edition = "2021"
authors = ["VenvCleaner Team"]
description = "A multi-mode application to help manage and clean up .venv folders on Mac and Linux"
license = "MIT"
repository = "https://github.com/your-org/venv-cleaner"
keywords = ["venv", "cleanup", "python", "virtual-environment"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "venv_cleaner"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "cargo"] }

# File system operations and utilities
walkdir = "2.4"
fs_extra = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (for potential future use)
tokio = { version = "1.0", features = ["full"], optional = true }

# TUI dependencies (optional, for future TUI mode)
ratatui = { version = "0.24", optional = true }
crossterm = { version = "0.27", optional = true }

# GUI dependencies (optional, for GUI mode using egui)
eframe = { version = "0.24", optional = true, default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use glow for rendering (OpenGL ES 2.0 / WebGL).
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = { version = "0.24", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Colored output for CLI
colored = "2.0"

# Progress bars and indicators
indicatif = "0.17"

# Opening files/folders in system default applications
open = "5.0"

# Native file dialogs (GUI mode only)
rfd = { version = "0.11", optional = true }

# Standard directories (home, documents, etc.)
dirs = "5.0"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["cli"]
cli = []
tui = ["ratatui", "crossterm"]
gui = ["eframe", "egui", "serde", "rfd"]
async = ["tokio"]

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
